# diplomaProject

./: README.md  pyproject.toml
api/: .gitignore  agents.db  download_models.py  main.py  ollama_client.py  runtime.py  schemas.py  test_main.http
api/data/hogwart/: characters.txt
api/data/hr/: test_hr.txt
api/prompts/: builders.py
api/retrieval/: chunking.py  embeddings.py  ingest.py  ingest_service.py  reranker.py  retriever.py
ui/: README.md  package-lock.json  package.json
ui/src/: App.css  router.js
ui/src/pages/: AiAssistant.js  Dashboard.js
ui/src/pages/dashboard/: agentsConfiguration.js  documentsManagement.js  liveStatus.js
