[project]
name = "diplomaProject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "joblib>=1.5.3",
    "scikit-learn>=1.8.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "click==8.3.1",
    "colorama==0.4.6",
    "fastapi==0.128.0",
    "h11==0.16.0",
    "idna==3.11",
    "joblib==1.5.3",
    "numpy==2.4.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "starlette==0.50.0",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.40.0",
    "sqlalchemy>=2.0.49",
    "langgraph>=1.1.6",
    "langchain-ollama>=1.1.0",
    "router>=0.1",
    "pip-check-reqs>=2.5.6",
    "sentence-transformers>=5.4.1",
    "faiss-cpu>=1.13.2",
    "python-multipart>=0.0.28",
]
